--- a/cis421-master/cis421-master/421ProjectGUI/421ProjectGUI/421ProjectGUI.csproj
+++ b/cis421-master/cis421-master/421ProjectGUI/421ProjectGUI/421ProjectGUI.csproj
@@ -50,6 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddCar.Designer.cs">
+      <DependentUpon>AddCar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddTruck.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddTruck.Designer.cs">
+      <DependentUpon>AddTruck.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +94,12 @@
     <Compile Include="vehicle.Designer.cs">
       <DependentUpon>vehicle.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddCar.resx">
+      <DependentUpon>AddCar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddTruck.resx">
+      <DependentUpon>AddTruck.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
     </EmbeddedResource>
